--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
                         <div class="text-center">
-                            <small class="text-muted">Demo: admin@example.com / password123</small>
+                            <small class="text-muted">Demo Mode: Any email and password will work</small>
                         </div>
                     </form>
                 </div>
